[gd_scene load_steps=7 format=3 uid="uid://c7kqqw0ruvxwa"]

[ext_resource type="Script" uid="uid://c8wlug47ulvko" path="res://scripts/ui/main_menu.gd" id="1_l6cm7"]
[ext_resource type="PackedScene" uid="uid://deuoysgixlqxu" path="res://scenes/ui/background.tscn" id="2_wu84c"]
[ext_resource type="FontFile" uid="uid://qtxme7uuf47a" path="res://assets/fonts/PixelOperator8-Bold.ttf" id="3_wu84c"]
[ext_resource type="Theme" uid="uid://cbnm1b1f2tdh8" path="res://assets/themes/new_theme.tres" id="4_wu84c"]

[sub_resource type="LabelSettings" id="LabelSettings_bqqt6"]
font = ExtResource("3_wu84c")

[sub_resource type="LabelSettings" id="LabelSettings_wu84c"]
font = ExtResource("3_wu84c")
font_size = 8

[node name="MainMenu" type="MarginContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_l6cm7")

[node name="Background" parent="." instance=ExtResource("2_wu84c")]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer"]
layout_mode = 2

[node name="Title" type="Label" parent="MarginContainer/HBoxContainer/VBoxContainer"]
texture_filter = 1
layout_mode = 2
text = "Space Invaders Clone"
label_settings = SubResource("LabelSettings_bqqt6")

[node name="MenuOptions" type="VBoxContainer" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 10
alignment = 1

[node name="StartGame" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer/MenuOptions"]
texture_filter = 1
layout_mode = 2
size_flags_horizontal = 0
focus_neighbor_bottom = NodePath("../Options")
theme = ExtResource("4_wu84c")
theme_override_font_sizes/font_size = 8
text = "New Game"
icon_alignment = 1

[node name="Options" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer/MenuOptions"]
texture_filter = 1
layout_mode = 2
size_flags_horizontal = 0
focus_neighbor_top = NodePath("../StartGame")
focus_neighbor_bottom = NodePath("../Credits")
theme = ExtResource("4_wu84c")
theme_override_font_sizes/font_size = 8
text = "Settings"
icon_alignment = 1

[node name="Credits" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer/MenuOptions"]
texture_filter = 1
layout_mode = 2
size_flags_horizontal = 0
focus_neighbor_top = NodePath("../Options")
focus_neighbor_bottom = NodePath("../Exit")
theme = ExtResource("4_wu84c")
theme_override_font_sizes/font_size = 8
text = "Credits"
icon_alignment = 1

[node name="Exit" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer/MenuOptions"]
texture_filter = 1
layout_mode = 2
size_flags_horizontal = 0
focus_neighbor_top = NodePath("../Credits")
theme = ExtResource("4_wu84c")
theme_override_font_sizes/font_size = 8
text = "Exit"
icon_alignment = 1

[node name="Version" type="Label" parent="MarginContainer/HBoxContainer/VBoxContainer"]
texture_filter = 1
layout_mode = 2
text = "v0.0.4
Made with Godot"
label_settings = SubResource("LabelSettings_wu84c")

[node name="CenterContainer" type="CenterContainer" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[connection signal="pressed" from="MarginContainer/HBoxContainer/VBoxContainer/MenuOptions/StartGame" to="." method="_on_start_game_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/VBoxContainer/MenuOptions/Options" to="." method="_on_options_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/VBoxContainer/MenuOptions/Credits" to="." method="_on_credits_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/VBoxContainer/MenuOptions/Exit" to="." method="_on_exit_pressed"]
